[tool.poetry]
name = "hepl"
version = "0.1.0"
description = ""
authors = ["Zach Miller <zach@zjmil.org>"]

[tool.poetry.dependencies]
python = "^3.10"
tableauhyperapi = "^0.0.14265"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pre-commit = "^2.17.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"
